--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libexo (0.1.1) unstable; urgency=low
+
+  * Update to 0.1.1 release.
+
+ -- Benedikt Meurer <bm@os-cillation.de>  Sun, 26 Sep 2004 11:03:14 +0200
+
 libexo (0.1.0) unstable; urgency=low
 
   * Initial Release.
