--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+0.1.2
+=====
+- Fixed a style problem with the iconbar.
+- Fixed a bug in the md5 module, that caused the libexo compile to fail
+  on some GNU/Linux systems.
+- The configure option --enable-final now enables linker optimizations for
+  plattforms that support it (recent GNU binutils required).
+
+
 0.1.1
 =====
 - An ICE module was added, based upon the ice-layer from xfce4-session and
