--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libexo (0.1.2) unstable; urgency=low
+
+  * Update to 0.1.2 release.
+
+ -- Benedikt Meurer <bm@os-cillation.de>  Thu, 14 Oct 2004 09:28:07 +0200
+
 libexo (0.1.1) unstable; urgency=low
 
   * Update to 0.1.1 release.
