2004-11-10	Benedikt Meurer <benny@xfce.org>
	* AUTHORS: Added note about libegg.




(Old svn revision: 16526)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-10	Benedikt Meurer <benny@xfce.org>
+
+	* AUTHORS: Added note about libegg.
+
 2004-11-09	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac: Depend on libxml-2.0. Set libtool verinfo properly.
