--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Benedikt Meurer <benny@xfce.org>
 
-Parts of this library are based on code from Gtk+, the GNOME project and
-the ROX Filer.
+Parts of this library are based on code from libegg, Gtk+, the GNOME project
+and the ROX Filer.
