--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-11	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-toolbars-private.c: Fix a crash on X setups where Gtk+
+	  doesn't use the best visual by default.
+
 2004-11-10	Benedikt Meurer <benny@xfce.org>
 
 	* AUTHORS: Added note about libegg.
