2004-11-12	Benedikt Meurer <benny@xfce.org>
	* configure.ac, NEWS: Version 0.1.3.
	* exo/exo-config.h.in, exo/exo-config.c, exo/exo.h, docs/exo-docs.sgml,
	  docs/tmpl/exo-config.sgml, docs/exo-sections.txt: Added
	  `Version Information' variables and macros similar to what
	  we use in Xfce and Gtk+.
	* m4/debug.m4: --enable-final is now on by default for plattforms
	  that support it.
	* exo/exo-toolbars-model.c(exo_toolbars_model_real_add_item): Always
	  check if the action is valid.




(Old svn revision: 16529)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+0.1.3
+=====
+- Added a framework for editable toolbars (ExoToolbarsModel, ExoToolbarsView,
+  ExoToolbarsEditor and ExoToolbarsEditorDialog).
+- Added initial API reference documentation.
+- Added version information variables and macros similar to whats used
+  in Xfce and Gtk+.
+
+
 0.1.2
 =====
 - Fixed a style problem with the iconbar.
