--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-11-12	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, NEWS: Version 0.1.3.
+	* exo/exo-config.h.in, exo/exo-config.c, exo/exo.h, docs/exo-docs.sgml,
+	  docs/tmpl/exo-config.sgml, docs/exo-sections.txt: Added
+	  `Version Information' variables and macros similar to what
+	  we use in Xfce and Gtk+.
+	* m4/debug.m4: --enable-final is now on by default for plattforms
+	  that support it.
+	* exo/exo-toolbars-model.c(exo_toolbars_model_real_add_item): Always
+	  check if the action is valid.
+
 2004-11-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-string.c(exo_str_is_equal): Avoid call to strcmp here.
