2004-11-23	Benedikt Meurer <benny@xfce.org>
	* HACKING: Additional notes for releases.




(Old svn revision: 16533)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-23	Benedikt Meurer <benny@xfce.org>
+
+	* HACKING: Additional notes for releases.
+
 2004-11-22	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-bar.c, exo/exo-icon-bar.h, docs/tmpl/exo-icon-bar.sgml:
