--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-11-23	Benedikt Meurer <benny@xfce.org>
 
+	* configure.ac, exo/exo.h, exo/exo-xsession-client.c,
+	  exo/exo-xsession-client.h, docs/: Added ExoXsessionClient class,
+	  which provides a lightweight X11R5 session management client.
+
+2004-11-23	Benedikt Meurer <benny@xfce.org>
+
 	* HACKING: Additional notes for releases.
 
 2004-11-22	Benedikt Meurer <benny@xfce.org>
