2004-11-23	Benedikt Meurer <benny@xfce.org>
	* README, HACKING: Improved these documents.




(Old svn revision: 16535)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-23	Benedikt Meurer <benny@xfce.org>
 
+	* README, HACKING: Improved these documents.
+
+2004-11-23	Benedikt Meurer <benny@xfce.org>
+
 	* configure.ac, exo/exo.h, exo/exo-xsession-client.c,
 	  exo/exo-xsession-client.h, docs/: Added ExoXsessionClient class,
 	  which provides a lightweight X11R5 session management client.
