--- a/HACKING
+++ b/HACKING
@@ -1,3 +1,34 @@
+Bug tracking system
+===================
+
+libexo uses the bug tracking system at http://bugs.os-cillation.com/
+hosted and maintained by os-cillation.
+
+
+Patches
+=======
+
+Please submit patches to the os-cillation bug tracking system or to the
+people listed in the AUTHORS file. Your patch should be in unified diff
+format (the -u option to GNU diff).
+
+Please and send a patch against a recent version of this package. Patches
+against the Subversion trunk branch are most preferable. You can always
+access the trunk branch from 
+
+  https://os-cillation.com:8080/websvn/listing.php?repname=libexo
+
+
+Feature requests
+================
+
+Please file feature requests to the os-cillation bug tracking system
+(http://bugs.os-cillation.com, product libexo) with a Severity of
+enhancement. Make sure that your feature request wasn't reported already
+before; requesting a feature several times won't increase the chance
+that it gets added.
+
+
 Coding Style
 ============
 
