--- a/README
+++ b/README
@@ -1,1 +1,23 @@
-libexo - Extensions to Xfce by os-cillation.
+What is it?
+===========
+
+This is libexo, an extension library to Xfce, developed by os-cillation. While
+Xfce comes with quite a few libraries that are targeted at desktop development,
+libexo is targeted at application development.
+
+
+Installation
+============
+
+The file 'INSTALL' contains generic installation instructions.
+
+
+How to report bugs?
+===================
+
+Bugs should be reported to the os-cillation bug tracking system
+(http://bugs.os-cillation.com, product libexo). You will need to
+create an account for yourself.
+
+Please read the HACKING file for information on where to send changes
+or bugfixes for this package.
