2004-11-26	Benedikt Meurer <benny@xfce.org>
	* NEWS: Updated for 0.2.0svn.




(Old svn revision: 16538)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-26	Benedikt Meurer <benny@xfce.org>
 
+	* NEWS: Updated for 0.2.0svn.
+
+2004-11-26	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-string.h, exo/exo-string.c: Added exo_strndupv() utility
 	  function to duplicate string arrays.
 	* exo/exo-enum-types.h, exo/exo-pango-extensions.c,
