2004-11-27	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-bar.c: Update background of the bin_window as well
	  when style changes. This fixes bug #23.




(Old svn revision: 16539)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+2004-11-27	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-bar.c: Update background of the bin_window as well
+	  when style changes. This fixes bug #23.
+
 2004-11-26	Benedikt Meurer <benny@xfce.org>
 
-	* NEWS: Updated for 0.2.0svn.
+	* NEWS: Updated for 0.2.0pre1.
 
 2004-11-26	Benedikt Meurer <benny@xfce.org>
 
