2004-11-28	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.h: Added 4 padding fields to ExoIconViewClass
	  for future expansion.
	* exo/exo-md5.h, exo/exo-md5.c: Changed the API to be compatible
	  with libgnome/libegg.
	* docs/: Updated API documentation.





(Old svn revision: 16541)

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,8 @@
 - Added an ellipsizing cell renderer ExoCellRendererEllipsizedText, compatible
   with GtkCellRendererText in Gtk+ 2.6.
 - ExoIconBar has an "orientation" property now. The "selection-changed" signal
-  has been renamed to "changed".
+  has been renamed to "changed". The ExoIconBar background is updated when
+  the Gtk style changes.
 - libexo is fully internationalized now.
 - The ExoToolbarsView class has been changed to provide a "Customize 
   Toolbars..." menu item together with the other items and to emit a
