--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-28	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.h: Added 4 padding fields to ExoIconViewClass
+	  for future expansion.
+	* exo/exo-md5.h, exo/exo-md5.c: Changed the API to be compatible
+	  with libgnome/libegg.
+	* docs/: Updated API documentation.
+
 2004-11-27	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-ellipsized-label.c(exo_ellipsized_label_new): Fix typo, the
