--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-0.2.0pre1
-=========
+0.2.0
+=====
 - The ellipsizing functions now use the Pango 1.6 builtin functionality
   if available.
 - Added lightweight session management support with the ExoXsessionClient
@@ -11,7 +11,8 @@
 - ExoIconBar has an "orientation" property now. The "selection-changed" signal
   has been renamed to "changed". The ExoIconBar background is updated when
   the Gtk style changes.
-- libexo is fully internationalized now.
+- libexo is fully internationalized now. German translations are already
+  available.
 - The ExoToolbarsView class has been changed to provide a "Customize 
   Toolbars..." menu item together with the other items and to emit a
   signal "customize".
