2004-11-28	Benedikt Meurer <benny@xfce.org>
	* NEWS, po/de.po, po/de.gmo: Fix version number.




(Old svn revision: 16543)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-28	Benedikt Meurer <benny@xfce.org>
 
+	* NEWS, po/de.po, po/de.gmo: Fix version number.
+
+2004-11-28	Benedikt Meurer <benny@xfce.org>
+
 	* po/libexo.pot: Updated.
 	* po/de.po, po/de.gmo: Completed the german translations.
 	* exo/exo-binding.c, exo/exo-binding.h: Avoid recursing in notify
