--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-0.2.0
-=====
+0.2.0pre2
+=========
 - The ellipsizing functions now use the Pango 1.6 builtin functionality
   if available.
 - Added lightweight session management support with the ExoXsessionClient
