--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@
 # Benedikt Meurer <benny@xfce.org>, 2004.
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.2.0\n"
+"Project-Id-Version: libexo 0.2.0pre2\n"
 "Report-Msgid-Bugs-To: http://bugs.os-cillation.com/\n"
 "POT-Creation-Date: 2004-11-28 15:43+0100\n"
 "PO-Revision-Date: 2004-11-28 15:45+0100\n"
