2004-11-30	Benedikt Meurer <benny@xfce.org>
	* src/: Copyright corrections.




(Old svn revision: 16544)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-30	Benedikt Meurer <benny@xfce.org>
+
+	* src/: Copyright corrections.
+
 2004-11-28	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS, po/de.po, po/de.gmo: Fix version number.
