2004-12-02	Benedikt Meurer <benny@xfce.org>
	* exo/exo-xsession-client.c: Added "restart-command" property.
	* exo/exo-pango-extensions.c: Updated gtk-doc.
	* docs/: Updated API documentation.
	* po/libexo.pot, po/de.po, po/de.gmo: Updated translations.
	* configure.ac, NEWS: Version 0.2.0.




(Old svn revision: 16546)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-12-02	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-xsession-client.c: Added "restart-command" property.
+	* exo/exo-pango-extensions.c: Updated gtk-doc.
+	* docs/: Updated API documentation.
+	* po/libexo.pot, po/de.po, po/de.gmo: Updated translations.
+	* configure.ac, NEWS: Version 0.2.0.
+
 2004-12-01	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c, exo/exo-icon-view.h, docs/: Added documentation
