2004-12-03	Benedikt Meurer <benny@xfce.org>
	* configure.ac: Bump version to 0.2.1svn.




(Old svn revision: 16548)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-03	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac: Bump version to 0.2.1svn.
+
 2004-12-02	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-xsession-client.c: Added "restart-command" property.
