--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-06	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c: Sync with latest changes to GtkIconView, esp.
+	  the accessibility support.
+	* exo/exo-icon-bar.c: Icon bar rendering and sizing fixes.
+
 2004-12-03	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac: Bump version to 0.2.1svn.
