2004-12-09	Benedikt Meurer <benny@xfce.org>
	* configure.ac, exo.spec.in, Makefile.am: Added .spec file and
	  "rpm" target.




(Old svn revision: 16550)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.2.1svn
+========
+- The icon bar is now sized and rendered properly with all Gtk+ theme engines.
+
+
 0.2.0
 =====
 - The ellipsizing functions now use the Pango 1.6 builtin functionality
