--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-09	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, exo.spec.in, Makefile.am: Added .spec file and
+	  "rpm" target.
+
 2004-12-06	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: Sync with latest changes to GtkIconView, esp.
