2004-12-12	Benedikt Meurer <benny@xfce.org>
	* po/libexo.pot, po/de.po, po/de.gmo: Ran make update-po.




(Old svn revision: 16551)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-12	Benedikt Meurer <benny@xfce.org>
+
+	* po/libexo.pot, po/de.po, po/de.gmo: Ran make update-po.
+
 2004-12-09	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac, exo.spec.in, Makefile.am: Added .spec file and
