2004-12-13	Benedikt Meurer <benny@xfce.org>
	* configure.ac, Makefile.am, THANKS, po/en_GB.po, po/en_GB.gmo: Added
	  en_GB translations from Dwayne Bailey <dwayne@translate.org.za>.




(Old svn revision: 16552)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-13	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, Makefile.am, THANKS, po/en_GB.po, po/en_GB.gmo: Added
+	  en_GB translations from Dwayne Bailey <dwayne@translate.org.za>.
+
 2004-12-12	Benedikt Meurer <benny@xfce.org>
 
 	* po/libexo.pot, po/de.po, po/de.gmo: Ran make update-po.
