2005-01-29	Benedikt Meurer <benny@xfce.org>
	* exo/exo-toolbars-view.c(exo_toolbars_view_context_menu), po/de.po,
	  po/libexo.pot: Better texts for the toolbar style chooser menu.




(Old svn revision: 16555)

--- a/po/de.po
+++ b/po/de.po
@@ -4,10 +4,10 @@
 # Benedikt Meurer <benny@xfce.org>, 2004.
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.2.0\n"
+"Project-Id-Version: libexo 0.2.1svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-12-12 17:33+0100\n"
-"PO-Revision-Date: 2004-12-02 15:55+0100\n"
+"POT-Creation-Date: 2005-01-29 20:07+0100\n"
+"PO-Revision-Date: 2005-01-29 20:09+0100\n"
 "Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -159,8 +159,8 @@ msgid "Toolbar _Style"
 msgstr "Werkzeugleisten_stil"
 
 #: exo/exo-toolbars-view.c:748
-msgid "_Default"
-msgstr "_Standard"
+msgid "_Desktop Default"
+msgstr "_Desktop Standard"
 
 #: exo/exo-toolbars-view.c:757
 msgid "_Icons only"
@@ -171,12 +171,12 @@ msgid "_Text only"
 msgstr "Nur _Text"
 
 #: exo/exo-toolbars-view.c:775
-msgid "_Both"
-msgstr "_Beides"
+msgid "Text for _All Icons"
+msgstr "Text für alle Icons"
 
 #: exo/exo-toolbars-view.c:784
-msgid "Both _horizontal"
-msgstr "Beides _horizontal"
+msgid "Text for I_mportant Icons"
+msgstr "Text für wichtige Icons"
 
 #: exo/exo-toolbars-view.c:792
 msgid "_Remove Toolbar"
@@ -190,3 +190,9 @@ msgstr "Werkzeugleiste anpassen..."
 #, c-format
 msgid "Invalid URI '%s'"
 msgstr ""
+
+#~ msgid "_Both"
+#~ msgstr "_Beides"
+
+#~ msgid "Both _horizontal"
+#~ msgstr "Beides _horizontal"
