--- a/po/libexo.pot
+++ b/po/libexo.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-12-12 17:33+0100\n"
+"POT-Creation-Date: 2005-01-29 20:07+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -159,7 +159,7 @@ msgid "Toolbar _Style"
 msgstr ""
 
 #: exo/exo-toolbars-view.c:748
-msgid "_Default"
+msgid "_Desktop Default"
 msgstr ""
 
 #: exo/exo-toolbars-view.c:757
@@ -171,11 +171,11 @@ msgid "_Text only"
 msgstr ""
 
 #: exo/exo-toolbars-view.c:775
-msgid "_Both"
+msgid "Text for _All Icons"
 msgstr ""
 
 #: exo/exo-toolbars-view.c:784
-msgid "Both _horizontal"
+msgid "Text for I_mportant Icons"
 msgstr ""
 
 #: exo/exo-toolbars-view.c:792
