2005-01-29	Benedikt Meurer <benny@xfce.org>
	* po/de.po: Improved translations for the toolbar style menu.




(Old svn revision: 16556)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-01-29	Benedikt Meurer <benny@xfce.org>
 
+	* po/de.po: Improved translations for the toolbar style menu.
+
+2005-01-29	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-toolbars-view.c(exo_toolbars_view_context_menu), po/de.po,
 	  po/libexo.pot: Better texts for the toolbar style chooser menu.
 
