--- a/po/de.po
+++ b/po/de.po
@@ -160,23 +160,23 @@ msgstr "Werkzeugleisten_stil"
 
 #: exo/exo-toolbars-view.c:748
 msgid "_Desktop Default"
-msgstr "_Desktop Standard"
+msgstr "_Desktop Vorgabe"
 
 #: exo/exo-toolbars-view.c:757
 msgid "_Icons only"
-msgstr "Nur _Icons"
+msgstr "Nur _Icons anzeigen"
 
 #: exo/exo-toolbars-view.c:766
 msgid "_Text only"
-msgstr "Nur _Text"
+msgstr "Nur _Text anzeigen"
 
 #: exo/exo-toolbars-view.c:775
 msgid "Text for _All Icons"
-msgstr "Text für alle Icons"
+msgstr "Text für _alle Icons anzeigen"
 
 #: exo/exo-toolbars-view.c:784
 msgid "Text for I_mportant Icons"
-msgstr "Text für wichtige Icons"
+msgstr "Text für _wichtige Icons anzeigen"
 
 #: exo/exo-toolbars-view.c:792
 msgid "_Remove Toolbar"
