--- a/README
+++ b/README
@@ -6,6 +6,13 @@ Xfce comes with quite a few libraries that are targeted at desktop development,
 libexo is targeted at application development.
 
 
+Current state
+=============
+
+libexo is currently considered BETA quality. The first officially suggested
+production release will be labeled 1.0.
+
+
 Installation
 ============
 
