2005-02-15	Benedikt Meurer <benny@xfce.org>
	* docs, doc: Rename docs to doc.




(Old svn revision: 16560)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-02-15	Benedikt Meurer <benny@xfce.org>
 
+	* docs, doc: Rename docs to doc.
+
+2005-02-15	Benedikt Meurer <benny@xfce.org>
+
 	* configure.ac, po/libexo.pot, po/libexo-0.3.pot: Include the major
 	  and minor version in the translation domain name to allow parallel
 	  installations of libexo-0.2 and libexo-0.3.
