2005-02-15	Benedikt Meurer <benny@xfce.org>
	* docs: Restructured.




(Old svn revision: 16562)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2005-02-15	Benedikt Meurer <benny@xfce.org>
 
-	* docs, doc: Rename docs to doc.
+	* docs: Restructured.
 
 2005-02-15	Benedikt Meurer <benny@xfce.org>
 
