--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 0.3.0svn
 ========
 - The icon bar is now sized and rendered properly with all Gtk+ theme engines.
+- The following obsolete components have been removed: ExoIce, ExoFileWatch,
+  ExoUri and ExoPropertyProxy.
+- The D-BUS dependency is gone.
 - New translations: Dwayne Bailey (en_GB)
 
 
