2005-02-17	Benedikt Meurer <benny@xfce.org>
	* python/exomodule.c, python/Makefile.am, python/exo.override, TODO,
	  python/exo.defs, configure.ac, acinclude.m4, Makefile.am: Initial
	  work on the Python bindings, currently includes ExoIconBar and
	  ExoXsessionClient.




(Old svn revision: 16564)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-17	Benedikt Meurer <benny@xfce.org>
+
+	* python/exomodule.c, python/Makefile.am, python/exo.override, TODO,
+	  python/exo.defs, configure.ac, acinclude.m4, Makefile.am: Initial
+	  work on the Python bindings, currently includes ExoIconBar and
+	  ExoXsessionClient.
+
 2005-02-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo.spec.in: Do not include the API docs with the exo-devel package,
