--- a/TODO
+++ b/TODO
@@ -1,10 +1,4 @@
 - The current style and color handling in ExoIconBar isn't optimal and kinda
   hacky after all. We've to replace that with a better implementation one
   day.
-
-URIs:
------
-
-	desktop://		Home dir and below
-	file://			System files
-	media://		Removable Media
+- Finish the Python bindings.
