2005-02-18	Benedikt Meurer <benny@xfce.org>
	* po/libexo-0.3.pot, po/de.po, po/en_GB.po: Update the translation
	  files with the recent changes to the source files.
	* po/ChangeLog: Add an empty file here, as its required by the
	  po/Makefile.in.in file generated by gettextize.
	* configure.ac: Add the Makefile for the Python examples. Add
	  a Makefile variable LIBEXO_VERSION_API, that contains the
	  API version of libexo.
	* python/examples/Makefile.am, python/examples/ellipsizing.py,
	  python/examples/README: Ship simple python examples, currently
	  only one sample program to demonstrate the use of the ellipsizing
	  objects in libexo.
	* python/__init__.py, python/pyexo.py, python/Makefile.am: Use a
	  similar technique like pygtk to support installing multiple
	  versions of the pyexo bindings in parallel.
	* python/exomodule.c, python/exo.override, python/exo.defs,
	  python/Makefile.am: Include the ExoEllipsizedLabel and
	  ExoCellRendererEllipsizedText classes with the Python bindings.
	* NEWS: Add note about the new Python bindings.




(Old svn revision: 16565)

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@
 - The following obsolete components have been removed: ExoIce, ExoFileWatch,
   ExoUri and ExoPropertyProxy.
 - The D-BUS dependency is gone.
+- Python bindings have been added.
 - New translations: Dwayne Bailey (en_GB)
 
 
