2005-02-24	Benedikt Meurer <benny@xfce.org>
	* python/exo.override, python/exo.defs: Add Python bindings for
	  the editable toolbars framework.
	* python/examples/Makefile.am, python/examples/toolbars.ui,
	  python/examples/toolbars.py: Add example how to use the editable
	  toolbars framework.




(Old svn revision: 16568)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-24	Benedikt Meurer <benny@xfce.org>
+
+	* python/exo.override, python/exo.defs: Add Python bindings for
+	  the editable toolbars framework.
+	* python/examples/Makefile.am, python/examples/toolbars.ui,
+	  python/examples/toolbars.py: Add example how to use the editable
+	  toolbars framework.
+
 2005-02-21	Benedikt Meurer <benny@xfce.org>
 
 	* python/exomodule.c: Add pygtk_tree_path_to_pyobject() and
