--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
-0.3.0svn
-========
+0.3.0pre1
+=========
 - The icon bar is now sized and rendered properly with all Gtk+ theme engines.
 - The following obsolete components have been removed: ExoIce, ExoFileWatch,
   ExoUri and ExoPropertyProxy.
-- The D-BUS dependency is gone.
+- The dependency on D-BUS is gone.
 - Python bindings have been added.
 - Updated API documentation.
 - New translations: Dwayne Bailey (en_GB)
