2005-03-13	Benedikt Meurer <benny@xfce.org>
	* configure.ac, NEWS: Version 0.3.0.
	* docs/reference/exo-docs.sgml: Update date.
	* po/: Run "make update-po".
	* po/de.po: Update the header.




(Old svn revision: 16572)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-13	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, NEWS: Version 0.3.0.
+	* docs/reference/exo-docs.sgml: Update date.
+	* po/: Run "make update-po".
+	* po/de.po: Update the header.
+
 2005-03-09	Benedikt Meurer <benny@xfce.org>
 
 	* exo.spec.in: Update the spec file.
