--- a/po/de.po
+++ b/po/de.po
@@ -1,13 +1,13 @@
 # German translations for libexo.
-# Copyright (c) 2004 os-cillation
+# Copyright (c) 2004-2005 os-cillation
 # This file is distributed under the same license as the libexo package.
-# Benedikt Meurer <benny@xfce.org>, 2004.
+# Benedikt Meurer <benny@xfce.org>, 2004-2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.3.0pre1\n"
+"Project-Id-Version: libexo 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-02 20:07+0100\n"
-"PO-Revision-Date: 2005-03-02 20:09+0100\n"
+"POT-Creation-Date: 2005-03-13 18:55+0100\n"
+"PO-Revision-Date: 2005-03-13 19:09+0100\n"
 "Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
